@@ -13,6 +13,8 @@ package TestCase::Literal::Character {
   sub escape : int () {
     
     # Escape sequence
+    my $ch_0 = '\0';
+    my $ch_a = '\a';
     my $ch_b = '\b';
     my $ch_t = '\t';
     my $ch_n = '\n';
@@ -21,6 +23,14 @@ package TestCase::Literal::Character {
     my $ch_dq = '\"';
     my $ch_q = '\'';
     my $ch_bsh = '\\';
+
+    unless ($ch_0 == 0) {
+      return 0;
+    }
+
+    unless ($ch_a == 7) {
+      return 0;
+    }
     
     unless ($ch_b == 8) {
       return 0;
